# thesis-backend

./: .editorconfig  .env.development  .env.test  .gitignore  Dockerfile  README.md  add_operator.py  check.sh  config.yml  conftest.py  deploy.sh  devshell.nix  docker-compose.yml  flake.nix  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: check.yaml
app/: main.py
app/api/: __init__.py  auth.py  ml.py  report.py  router.py  scraper.py
app/core/: config.py  logging_config.py
app/database/: database.py  database_helper.py
app/endpoints/authentication/: __init__.py  auth.py
app/model/: userinfo.py
app/models/: __init__.py  bot_prediction.py  log_record.py  operator.py  report.py  session.py  tweet.py  twitter.py
app/schemas/: __init__.py  auth.py  bot_prediction.py  report.py  tweet.py  tweet_info.py  twitter.py  twitter_user.py  user.py  user_detail.py  user_info.py  userinfo.py
app/services/: auth.py  bot_checker.py  clean_database.py  log_db_handler.py  ml.py  report.py  scrape.py  url_parser.py
app/tests/: conftest.py  test_auth.py  test_background_task.py  test_main.py  test_ml.py  test_report.py  test_scraper.py
app/tests/data/: tweets.json  user.json
app/tests/helpers/: __init__.py  auth_helpers.py  check_helpers.py  mock_models.py  report_helpers.py
app/tests/scripts/: get_user_data.py
doc/sequence-diagrams/src/: diagrams.md  history.txt  twitter_check.txt  twitter_detail.txt
model/: gnn.py  inference.py  sobog.py
scripts/: add_operator.py
