[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin", "pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pandas", "networkx.*", "mongoengine", "tweepy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
env_files = [".env.test"]
