[options]
packages = find:
install_requires =
	fastapi==0.70.1
	pandas==1.3.5
	tweepy==4.4.0
	uvicorn==0.16.0
	cachetools==5.0.0
	pyjwt==2.4.0
	passlib==1.7.4
	bcrypt==3.2.0
	mongoengine==0.23.1
	fastapi-utils==0.2.1
	slowapi==0.1.5
	torch==1.11.0
	networkx==2.7.1
	scikit-learn==1.0.2

[options.packages.find]
include = app*, model*
exclude = app.tests*

[flake8]
max-line-length = 88

per-file-ignores =
    # imported but unused
    __init__.py: F401
